[tool.poetry]
name = "doggo"
version = "0.1.0"
description = ""
authors = ["Anonymous <nekhayiv@gmail.com>"]
readme = "README.md"
packages = [{include = "doggo", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
# Code management
pre-commit = "*"

# Testing
pytest = "*"
pytest-cov = "*"
mypy = "*"
types-psutil = "^5.9.5.20240106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report xml --cov-config=.coveragerc"
pythonpath = ["src"]
testpaths = ["tests"]


[tool.isort]
profile = "black"
